completion - install instruction and simple line parsing/callback api
Run `<pkgname> completion` for install instruction.
Run `<pkgname> completion >> datauri completion >> ~/.bashrc` (or ~/.zshrc)

Simply log in the callback to show completion output.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "git://github.com/mklabs/pkgrc.git"
   },
+  "main": "./lib/completion",
   "bin": "./bin/pkgrc",
   "engines": {
     "node": "> 0.4"
