--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "node": "> 0.4"
   },
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "nopt": "~1.0.10",
+    "commander": "~0.2.0",
+    "optimist": "~0.2.6"
+  }
 }
