--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   },
   "devDependencies": {
     "vows": "~0.6.1"
-  }
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "https://github.com/mklabs/node-tabtab/blob/master/LICENSE"
+    }
+  ]
 }
