--- a/package.json
+++ b/package.json
@@ -2,25 +2,33 @@
   "author": "mklabs",
   "name": "tabtab",
   "description": "tab completion helpers, for node cli programs. Inspired by npm completion.",
-  "version": "0.0.4",
-  "main": "./lib/completion",
-  "engines": {
-    "node": "> 0.4"
-  },
+  "main": "index.js",
   "scripts": {
-    "test": "node node_modules/vows/bin/vows test/*.js --spec --isolate"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/mklabs/node-tabtab.git"
+    "test": "bake test",
+    "prepublish": "bake babel",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
-    "vows": "~0.8.1"
+    "eslint": "^2.8.0",
+    "jscs": "^3.0.3",
+    "mocha": "^2.4.5",
+    "watchd": "github:mklabs/watchd",
+    "bake": "github:mklabs/bake",
+    "babel-cli": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
+    "semantic-release": "^4.3.5"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/mklabs/node-tabtab/blob/master/LICENSE"
-    }
-  ]
+  "license": "MIT",
+  "keywords": [
+    "terminal",
+    "tab",
+    "unix",
+    "console",
+    "complete",
+    "completion"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mklabs/node-tabtab.git"
+  }
 }
