--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "bin": "bin/tabtab",
   "main": "index.js",
   "scripts": {
-    "test": "bake test",
+    "test": "mocha test",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
