--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "devDependencies": {
+    "babel-cli": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
+    "bake": "github:mklabs/bake",
     "eslint": "^2.8.0",
     "jscs": "^3.0.3",
     "mocha": "^2.4.5",
-    "watchd": "github:mklabs/watchd",
-    "bake": "github:mklabs/bake",
-    "babel-cli": "^6.7.5",
-    "babel-preset-es2015": "^6.6.0",
-    "semantic-release": "^4.3.5"
+    "semantic-release": "^4.3.5",
+    "watchd": "github:mklabs/watchd"
   },
   "license": "MIT",
   "keywords": [
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
+    "inquirer": "^1.0.2",
     "minimist": "^1.2.0",
     "npmlog": "^2.0.3"
   }
