--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "debug": "^2.2.0",
     "inquirer": "^1.0.2",
     "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "npmlog": "^2.0.3"
   }
 }
