--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "test": "SHELL=zsh babel-node ./node_modules/.bin/mocha test",
     "babel": "babel lib/ -d src/",
+    "changelog": "npm run semantic",
     "prepublish": "npm run babel",
-    "pretest": "npm run babel"
+    "pretest": "npm run babel",
+    "release": "standard-version"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
@@ -18,6 +20,7 @@
     "gentle-cli": "^1.0.3",
     "jscs": "^3.0.3",
     "mocha": "^2.4.5",
+    "standard-version": "^2.1.2",
     "watchd": "^1.0.0"
   },
   "license": "MIT",
@@ -40,5 +43,5 @@
     "mkdirp": "^0.5.1",
     "npmlog": "^2.0.3"
   },
-  "version": "1.0.2"
+  "version": "1.0.3"
 }
