--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,11 @@ cache:
 notifications:
   email: false
 node_js:
-  - '4'
+  - stable
+  - v0.10
+  - v0.12
+  - v4
+  - v5
 before_install:
   - npm i -g npm@^2.0.0
 before_script:
