--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "inquirer": "^1.0.2",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "npmlog": "^2.0.3"
+    "npmlog": "^2.0.3",
+    "object-assign": "^4.1.0"
   },
   "version": "1.1.1"
 }
