--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,8 @@
-{ "presets": ["es2015"] }
+{
+  "presets": ["es2015"],
+
+  "plugins": [
+    "transform-runtime",
+    "add-module-exports"
+  ]
+}
