fix: create duplicate-free version of completion items accross evt listeners

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "dependencies": {
     "debug": "^2.2.0",
     "inquirer": "^1.0.2",
+    "lodash.difference": "^4.5.0",
+    "lodash.uniq": "^4.5.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "npmlog": "^2.0.3",
