--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/mklabs/node-tabtab.git"
+    "url": "https://github.com/mklabs/tabtab.git"
   },
   "dependencies": {
     "debug": "^2.2.0",
