--- a/package.json
+++ b/package.json
@@ -5,25 +5,9 @@
   "bin": "bin/tabtab",
   "main": "index.js",
   "scripts": {
-    "test": "SHELL=zsh babel-node ./node_modules/.bin/mocha test",
-    "babel": "babel lib/ -d src/",
-    "changelog": "standard-version -m '%s'",
-    "prepublish": "npm run babel",
-    "pretest": "npm run babel",
-    "release": "standard-version -m '%s' && git push origin master --tags && npm publish",
-    "watch": "watchd lib/* -c 'npm run babel'"
+    "test": "mocha"
   },
-  "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.6.0",
-    "eslint": "^2.8.0",
-    "gentle-cli": "^1.0.3",
-    "jscs": "^3.0.3",
-    "mocha": "^2.4.5",
-    "standard-version": "^2.1.2",
-    "watchd": "^1.0.0"
-  },
+  "devDependencies": {},
   "license": "MIT",
   "keywords": [
     "terminal",
@@ -38,13 +22,19 @@
     "url": "https://github.com/mklabs/tabtab.git"
   },
   "dependencies": {
-    "debug": "^2.2.0",
+    "debug": "^2.6.9",
+    "default-shell": "^1.0.1",
+    "gentle-cli": "^1.0.3",
     "inquirer": "^1.0.2",
     "lodash.difference": "^4.5.0",
     "lodash.uniq": "^4.5.0",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "object-assign": "^4.1.0"
+    "mocha": "^5.2.0",
+    "object-assign": "^4.1.1",
+    "reactify": "^1.1.1",
+    "untildify": "^3.0.3",
+    "user-home": "^2.0.0"
   },
   "version": "2.2.2"
 }
