--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,24 @@
 sudo: false
 language: node_js
+
+matrix:
+  include:
+    - node_js: "10"
+    - node_js: "8"
+    - node_js: "6"
+
 cache:
   directories:
     - node_modules
+
 notifications:
   email: false
-node_js:
-  - stable
+
 before_install:
-  - npm i -g npm@^2.0.0
+  - npm install -g npm@latest
+
 before_script:
   - npm prune
-branches:
-  except:
-    - /^v\d+\.\d+\.\d+$/
+
+after_success:
+  - npm run coverage
