mocha: increase timeout to avoid failure on node 6

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "bin": "bin/tabtab",
   "main": "lib/index.js",
   "scripts": {
-    "test": "nyc mocha",
+    "test": "nyc mocha --timeout 5000",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "devDependencies": {
