--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "author": "mklabs",
   "name": "tabtab",
   "description": "tab completion helpers, for node cli programs. Inspired by npm completion.",
-  "bin": "bin/tabtab",
   "main": "lib/index.js",
   "scripts": {
-    "test": "nyc mocha --timeout 5000",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "test": "nyc mocha -r babel-core/register -r babel-polyfill --timeout 5000",
+    "mocha": "mocha -r babel-core/register -r babel-polyfill --timeout 5000",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "watch": "npm-watch"
+  },
+  "watch": {
+    "test": "{lib,test}/**/*.js"
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
     "mocha": "^5.2.0",
-    "nyc": "^12.0.2",
-    "gentle-cli": "^1.0.3"
+    "npm-watch": "^0.3.0",
+    "nyc": "^12.0.2"
   },
   "license": "MIT",
   "keywords": [
@@ -28,8 +32,12 @@
     "url": "https://github.com/mklabs/tabtab.git"
   },
   "dependencies": {
-    "debug": "^2.6.9",
-    "inquirer": "^1.0.2",
+    "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "debug": "^3.1.0",
+    "inquirer": "^6.0.0",
+    "inquirer-test": "^2.0.1",
     "lodash.difference": "^4.5.0",
     "lodash.uniq": "^4.5.0",
     "minimist": "^1.2.0",
