--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "tab completion helpers, for node cli programs. Inspired by npm completion.",
   "main": "lib/index.js",
   "scripts": {
-    "test": "nyc mocha -r babel-core/register -r babel-polyfill --timeout 5000",
-    "mocha": "mocha -r babel-core/register -r babel-polyfill --timeout 5000",
+    "test": "NODE_ENV=test nyc mocha -r babel-core/register -r babel-polyfill --timeout 5000",
+    "mocha": "NODE_ENV=test mocha -r babel-core/register -r babel-polyfill --timeout 5000",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "watch": "npm-watch"
   },
@@ -16,7 +16,11 @@
     "coveralls": "^3.0.2",
     "mocha": "^5.2.0",
     "npm-watch": "^0.3.0",
-    "nyc": "^12.0.2"
+    "nyc": "^12.0.2",
+    "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "inquirer-test": "^2.0.1"
   },
   "license": "MIT",
   "keywords": [
@@ -32,18 +36,11 @@
     "url": "https://github.com/mklabs/tabtab.git"
   },
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "debug": "^3.1.0",
+    "es6-promisify": "^6.0.0",
     "inquirer": "^6.0.0",
-    "inquirer-test": "^2.0.1",
-    "lodash.difference": "^4.5.0",
-    "lodash.uniq": "^4.5.0",
     "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
-    "untildify": "^3.0.3",
-    "user-home": "^2.0.0"
+    "untildify": "^3.0.3"
   },
   "version": "2.2.2"
 }
