--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "watch": "npm-watch",
     "prettier": "prettier -l '{lib,test}/**/*.js'",
     "quick-test": "DEBUG='tabtab*' node test/fixtures/installer-install.js",
-    "bash-quick-test": "DEBUG=tabtab* COMP_CWORD='2' COMP_LINE='tabtab foo' COMP_POINT='10' tabtab completion -- tabtab foo"
+    "bash-quick-test": "DEBUG=tabtab* COMP_CWORD='2' COMP_LINE='tabtab foo' COMP_POINT='10' tabtab completion -- tabtab foo",
+    "just:a:test": "echo just a test",
+    "just:a:test2": "echo just a test"
   },
   "watch": {
     "test": "{lib,test}/**/*.js"
