--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
     "changelog": "standard-version -m '%s'",
     "prepublish": "npm run babel",
     "pretest": "npm run babel",
-    "release": "standard-version -m '%s' && git push origin master --tags && npm publish",
-    "watch": "watchd lib/* -c 'npm run babel'"
+    "release": "standard-version -m '%s' && git push origin master --tags && npm publish"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-add-module-exports": "^1.0.0",
     "babel-preset-es2015": "^6.6.0",
-    "eslint": "^2.8.0",
+    "eslint": "^5.6.0",
     "gentle-cli": "^1.0.3",
     "jscs": "^3.0.3",
-    "mocha": "^2.4.5",
-    "standard-version": "^2.1.2",
-    "watchd": "^1.0.0"
+    "mocha": "^5.2.0",
+    "standard-version": "^4.4.0"
   },
   "license": "MIT",
   "keywords": [
@@ -38,8 +36,8 @@
     "url": "https://github.com/mklabs/tabtab.git"
   },
   "dependencies": {
-    "debug": "^2.2.0",
-    "inquirer": "^1.0.2",
+    "debug": "^4.0.1",
+    "inquirer": "^6.2.0",
     "lodash.difference": "^4.5.0",
     "lodash.uniq": "^4.5.0",
     "minimist": "^1.2.0",
