--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,8 @@
   "extends": "mklabs",
 
   "rules": {
-    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
+    "no-param-reassign": "off",
+    "no-console": "off",
+    "consistent-return": "off"
   }
 }
