--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 sudo: false
 language: node_js
 
-matrix:
-  include:
-    - node_js: "10"
+node_js:
+  - 10
+  - 8
+  - 7
 
 cache:
   directories:
