--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "debug": "^4.0.1",
+    "es6-promisify": "^6.0.0",
     "inquirer": "^6.0.0",
     "minimist": "^1.2.0",
     "untildify": "^3.0.3"
