Fixing check of filename when installing
Fix #47

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "es6-promisify": "^6.0.0",
     "inquirer": "^6.0.0",
     "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1",
     "untildify": "^3.0.3"
   },
   "auto-changelog": {
