--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "{lib,test}/**/*.js"
   },
   "devDependencies": {
+    "assert-rejects": "^1.0.0",
     "auto-changelog": "^1.8.0",
     "c8": "^3.2.0",
     "coveralls": "^3.0.2",
