--- a/package.json
+++ b/package.json
@@ -59,5 +59,5 @@
     "commitLimit": false,
     "ignoreCommitPattern": "changelog|readme|^test"
   },
-  "version": "3.0.1-beta"
+  "version": "3.0.2"
 }
