--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "name": "tabtab",
   "description": "tab completion helpers, for node cli programs. Inspired by npm completion.",
   "main": "lib/index.js",
+  "files": [
+    "lib/**/*.{js,sh}"
+  ],
   "scripts": {
     "test": "mkdirp ~/.config/tabtab && DEBUG='tabtab*' c8 mocha --timeout 5000",
     "posttest": "npm run eslint",
