--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
   "extends": "mklabs",
-
+  "parserOptions": {
+    "ecmaVersion": 2019
+  },
   "rules": {
     "no-param-reassign": "off",
     "no-console": "off",
