--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "author": "mklabs",
   "name": "tabtab",
+  "version": "3.0.3",
   "description": "tab completion helpers, for node cli programs. Inspired by npm completion.",
   "main": "lib/index.js",
   "files": [
     "lib/**/*.{js,sh}"
   ],
   "scripts": {
-    "test": "mkdirp ~/.config/tabtab && DEBUG='tabtab*' c8 mocha --timeout 5000",
+    "test": "mkdir -p ~/.config/tabtab && DEBUG=\"tabtab*\" c8 mocha --timeout 5000",
     "posttest": "npm run eslint",
-    "mocha": "DEBUG='tabtab*' mocha --timeout 5000",
+    "mocha": "DEBUG=\"tabtab*\" mocha --timeout 5000",
     "coverage": "c8 report --reporter=text-lcov | coveralls",
     "coverage-html": "npm run mocha && c8 report --reporter=html && serve coverage",
     "eslint": "eslint lib/ test/",
@@ -22,18 +23,23 @@
   "watch": {
     "test": "{lib,test}/**/*.js"
   },
+  "dependencies": {
+    "debug": "^4.3.3",
+    "inquirer": "^8.2.0",
+    "untildify": "^4.0.0"
+  },
   "devDependencies": {
-    "auto-changelog": "^1.8.0",
-    "c8": "^3.2.0",
-    "coveralls": "^3.0.2",
+    "auto-changelog": "^2.4.0",
+    "c8": "^7.11.0",
+    "coveralls": "^3.1.1",
     "eslint-config-mklabs": "^1.0.9",
     "inquirer-test": "^2.0.1",
-    "jsdoc-to-markdown": "^4.0.1",
-    "mocha": "^5.2.0",
-    "npm-watch": "^0.4.0",
-    "remark-cli": "^5.0.0",
-    "remark-toc": "^5.0.0",
-    "serve": "^10.0.2"
+    "jsdoc-to-markdown": "^7.1.1",
+    "mocha": "^9.2.0",
+    "npm-watch": "^0.11.0",
+    "remark-cli": "^10.0.1",
+    "remark-toc": "^8.0.1",
+    "serve": "^13.0.2"
   },
   "license": "MIT",
   "keywords": [
@@ -46,21 +52,16 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/mklabs/tabtab.git"
+    "url": "git+https://github.com/mklabs/tabtab.git"
   },
-  "dependencies": {
-    "debug": "^4.0.1",
-    "es6-promisify": "^6.0.0",
-    "inquirer": "^6.0.0",
-    "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1",
-    "untildify": "^3.0.3"
+  "bugs": {
+    "url": "https://github.com/mklabs/tabtab/issues"
   },
+  "homepage": "https://github.com/mklabs/tabtab#readme",
   "auto-changelog": {
     "template": "keepachangelog",
     "unreleased": true,
     "commitLimit": false,
     "ignoreCommitPattern": "changelog|readme|^test"
-  },
-  "version": "3.0.3"
+  }
 }
