--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,5 +34,8 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - name: Run coverage
-        run: npm run coverage
+      - name: Run Coveralls
+        uses: coverallsapp/github-action@1.1.3
+        if: matrix.node == 16
+        with:
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
